--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "blogs", '#', id: "logo" %>
+    <%= link_to "blogs", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Login", '#' %></li>
-        <li><%= link_to "singup", '#' %></li>
+        <li><%= link_to "Login", login_path %></li>
+        <li><%= link_to "Singup", signup_path %></li>
       </ul>
     </nav>
   </div>
