--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,15 @@
     <%= link_to "blogs", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Login", login_path %></li>
-        <li><%= link_to "Singup", signup_path %></li>
+        <% if logged_in? %>
+            <li><%= @current_user.name %> さん</li>
+            <li><%= link_to "記事を書く", posts_new_path %></li>
+            <li><%= link_to "アカウント編集", "#" %></li>
+            <li><%= link_to "ログアウト", logout_path, method: "delete" %></li>
+        <% else %>
+            <li><%= link_to "Login", login_path %></li>
+            <li><%= link_to "Singup", signup_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
