--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
-            <li><%= @current_user.name %> さん</li>
+            <li class="nav__name"><%= @current_user.name %> さん</li>
             <li><%= link_to "記事を書く", posts_new_path %></li>
             <li><%= link_to "アカウント編集", edit_user_path(current_user) %></li>
             <li><%= link_to "ログアウト", logout_path, method: "delete" %></li>
