--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,6 +20,6 @@
 
         <%= f.submit "更新", class: "btn btn-primary" %>
     <% end %>
-    <%= link_to "アカウントを削除する", user_path, :class => "btn btn-danger", method: :delete, data: { confirm: "本当に削除しますか？" } %>
+    <%= link_to "アカウントを削除する", user_path, :class => "btn btn-danger btn-delete", method: :delete, data: { confirm: "本当に削除しますか？" } %>
   </div>
 </div>
